fix layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .droparea {
-    border: 1px var(--stroke-default) dashed;
+    border: 2px dashed transparent;
+    outline: 1px var(--stroke-default) dashed;
     border-radius: 0.25rem;
     display: grid;
     justify-items: center;
@@ -22,7 +23,7 @@
     }
 
     &:hover, &:focus-within {
-        border-width: 2px;
+        outline-width: 0;
         border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
         
